goti stands added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
       <div class="verBottom"></div>
       <div class="horLeft"></div>
       <div class="horRight"></div>
+      <div class="goti-stand" id="goti1"></div>
+      <div class="goti-stand" id="goti2"></div>
+      <div class="goti-stand" id="goti3"></div>
+      <div class="goti-stand" id="goti4"></div>
+      <div class="goti-stand" id="goti5"></div>
+      <div class="goti-stand" id="goti6"></div>
+      <div class="goti-stand" id="goti7"></div>
+      <div class="goti-stand" id="goti8"></div>
+      <div class="goti-stand" id="goti9"></div>
+      <div class="goti-stand" id="goti10"></div>
+      <div class="goti-stand" id="goti11"></div>
+      <div class="goti-stand" id="goti12"></div>
+      <div class="goti-stand" id="goti13"></div>
+      <div class="goti-stand" id="goti14"></div>
+      <div class="goti-stand" id="goti15"></div>
+      <div class="goti-stand" id="goti16"></div>
+      <div class="goti-stand" id="goti17"></div>
+      <div class="goti-stand" id="goti18"></div>
+      <div class="goti-stand" id="goti19"></div>
+      <div class="goti-stand" id="goti20"></div>
+      <div class="goti-stand" id="goti21"></div>
+      <div class="goti-stand" id="goti22"></div>
+      <div class="goti-stand" id="goti23"></div>
+      <div class="goti-stand" id="goti24"></div>
     </div>
   </body>
 </html>
