--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="forRedStorage"></div>
     <div class="container">
       <div class="first">
         <div class="second">
@@ -45,5 +43,7 @@
       <div class="goti-stand" id="goti23"></div>
       <div class="goti-stand" id="goti24"></div>
     </div>
+    <div class="forGreenStorage"></div>
+    <script src="app.js"></script>
   </body>
 </html>
