--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
       <div class="verBottom"></div>
       <div class="horLeft"></div>
       <div class="horRight"></div>
-      <div class="goti-stand" id="goti1"></div>
-      <div class="goti-stand" id="goti2"></div>
-      <div class="goti-stand" id="goti3"></div>
-      <div class="goti-stand" id="goti4"></div>
-      <div class="goti-stand" id="goti5"></div>
-      <div class="goti-stand" id="goti6"></div>
-      <div class="goti-stand" id="goti7"></div>
-      <div class="goti-stand" id="goti8"></div>
-      <div class="goti-stand" id="goti9"></div>
-      <div class="goti-stand" id="goti10"></div>
-      <div class="goti-stand" id="goti11"></div>
-      <div class="goti-stand" id="goti12"></div>
-      <div class="goti-stand" id="goti13"></div>
-      <div class="goti-stand" id="goti14"></div>
-      <div class="goti-stand" id="goti15"></div>
-      <div class="goti-stand" id="goti16"></div>
-      <div class="goti-stand" id="goti17"></div>
-      <div class="goti-stand" id="goti18"></div>
-      <div class="goti-stand" id="goti19"></div>
-      <div class="goti-stand" id="goti20"></div>
-      <div class="goti-stand" id="goti21"></div>
-      <div class="goti-stand" id="goti22"></div>
-      <div class="goti-stand" id="goti23"></div>
-      <div class="goti-stand" id="goti24"></div>
+      <button class="goti-stand" id="goti1" ></button>
+      <button class="goti-stand" id="goti2" ></button>
+      <button class="goti-stand" id="goti3" ></button>
+      <button class="goti-stand" id="goti4" ></button>
+      <button class="goti-stand" id="goti5" ></button>
+      <button class="goti-stand" id="goti6" ></button>
+      <button class="goti-stand" id="goti7" ></button>
+      <button class="goti-stand" id="goti8" ></button>
+      <button class="goti-stand" id="goti9" ></button>
+      <button class="goti-stand" id="goti10" ></button>
+      <button class="goti-stand" id="goti11" ></button>
+      <button class="goti-stand" id="goti12" ></button>
+      <button class="goti-stand" id="goti13" ></button>
+      <button class="goti-stand" id="goti14" ></button>
+      <button class="goti-stand" id="goti15" ></button>
+      <button class="goti-stand" id="goti16" ></button>
+      <button class="goti-stand" id="goti17" ></button>
+      <button class="goti-stand" id="goti18" ></button>
+      <button class="goti-stand" id="goti19" ></button>
+      <button class="goti-stand" id="goti20" ></button>
+      <button class="goti-stand" id="goti21" ></button>
+      <button class="goti-stand" id="goti22" ></button>
+      <button class="goti-stand" id="goti23" ></button>
+      <button class="goti-stand" id="goti24" ></button>
     </div>
     <div class="forGreenStorage"></div>
     <script src="app.js"></script>
