--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
   </head>
   <body>
     <div class="forRedStorage">
-      <div class="redGotiStand"><div class="goti redGoti" id="red1"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red2"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red3"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red4"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red5"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red6"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red7"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red8"></div></div>
-      <div class="redGotiStand"><div class="goti redGoti" id="red9"></div></div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red1" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red2" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red3" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red4" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red5" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red6" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red7" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red8" draggable="true"></div>
+      </div>
+      <div class="redGotiStand">
+        <div class="goti redGoti" id="red9" draggable="true"></div>
+      </div>
     </div>
     <div class="container">
       <div class="first">
@@ -29,42 +47,61 @@
       <div class="verBottom"></div>
       <div class="horLeft"></div>
       <div class="horRight"></div>
-      <div class="goti-stand" id="goti1" ></div>
-      <div class="goti-stand" id="goti2" ></div>
-      <div class="goti-stand" id="goti3" ></div>
-      <div class="goti-stand" id="goti4" ></div>
-      <div class="goti-stand" id="goti5" ></div>
-      <div class="goti-stand" id="goti6" ></div>
-      <div class="goti-stand" id="goti7" ></div>
-      <div class="goti-stand" id="goti8" ></div>
-      <div class="goti-stand" id="goti9" ></div>
-      <div class="goti-stand" id="goti10" ></div>
-      <div class="goti-stand" id="goti11" ></div>
-      <div class="goti-stand" id="goti12" ></div>
-      <div class="goti-stand" id="goti13" ></div>
-      <div class="goti-stand" id="goti14" ></div>
-      <div class="goti-stand" id="goti15" ></div>
-      <div class="goti-stand" id="goti16" ></div>
-      <div class="goti-stand" id="goti17" ></div>
-      <div class="goti-stand" id="goti18" ></div>
-      <div class="goti-stand" id="goti19" ></div>
-      <div class="goti-stand" id="goti20" ></div>
-      <div class="goti-stand" id="goti21" ></div>
-      <div class="goti-stand" id="goti22" ></div>
-      <div class="goti-stand" id="goti23" ></div>
-      <div class="goti-stand" id="goti24" ></div>
+      <div class="goti-stand" id="goti1"></div>
+      <div class="goti-stand" id="goti2"></div>
+      <div class="goti-stand" id="goti3"></div>
+      <div class="goti-stand" id="goti4"></div>
+      <div class="goti-stand" id="goti5"></div>
+      <div class="goti-stand" id="goti6"></div>
+      <div class="goti-stand" id="goti7"></div>
+      <div class="goti-stand" id="goti8"></div>
+      <div class="goti-stand" id="goti9"></div>
+      <div class="goti-stand" id="goti10"></div>
+      <div class="goti-stand" id="goti11"></div>
+      <div class="goti-stand" id="goti12"></div>
+      <div class="goti-stand" id="goti13"></div>
+      <div class="goti-stand" id="goti14"></div>
+      <div class="goti-stand" id="goti15"></div>
+      <div class="goti-stand" id="goti16"></div>
+      <div class="goti-stand" id="goti17"></div>
+      <div class="goti-stand" id="goti18"></div>
+      <div class="goti-stand" id="goti19"></div>
+      <div class="goti-stand" id="goti20"></div>
+      <div class="goti-stand" id="goti21"></div>
+      <div class="goti-stand" id="goti22"></div>
+      <div class="goti-stand" id="goti23"></div>
+      <div class="goti-stand" id="goti24"></div>
     </div>
     <div class="forGreenStorage">
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green1"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green2"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green3"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green4"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green5"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green6"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green7"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green8"></div></div>
-      <div class="greenGotiStand"><div class="goti greenGoti" id="green9"></div></div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green1" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green2" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green3" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green4" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green5" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green6" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green7" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green8" draggable="true"></div>
+      </div>
+      <div class="greenGotiStand">
+        <div class="goti greenGoti" id="green9" draggable="true"></div>
+      </div>
     </div>
+    <script src="pc.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
