--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
         <div class="goti greenGoti" id="green9" draggable="true"></div>
       </div>
     </div>
-    <script src="pc.js"></script>
+    <script src="pc.js?autoload"></script>
   </body>
 </html>
